# CoScientist

./: .gitignore  .gitmodules  README.md  example_config.env  pyproject.toml  requirements.txt  streamlit_app.py  tools_checklist.md
ChemCoScientist/: main_cli.py  streamlit_app.py  utils.py
ChemCoScientist/agents/: agents.py  agents_prompts.py
ChemCoScientist/chemical_utils/: chemical_functions.py  ocr_pipeline.py  openchemie_functions.py  retrosynthesis.py
ChemCoScientist/conf/: create_conf.py
ChemCoScientist/data_store/: __init__.py
ChemCoScientist/download_papers/: functions.py  prompt.py
ChemCoScientist/frontend/: chat.py  dataset_management.py  init_session.py  paper_management.py  side_bar.py  utils.py
ChemCoScientist/mcp/: Dockerfile  chemical_server.py  docker-compose.yml  papers_search_server.py
ChemCoScientist/memory/: json_db.py  memory_manager.py
CoScientist/: __init__.py  agent.py  config.py  main.py  test.py
FedotCoSc/: main.py  pyproject.toml
MedCoScientist/: main_cli.py
docker/: Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  INSTALLATION.md  development_guide.md  project_structure.md
mcp-servers/: docker-compose.yml
mcp-servers/paper-analysis-mcp-server/: .env.example  Dockerfile  README.md  paper_analysis_server.py  prompts.py  pyproject.toml
mcp-servers/paper-analysis-mcp-server/server/: chemical_functions.py  chroma_db_operations.py  paper_analysis_server.py  prompts.py  question_processing.py  settings.py
metrics/: compute_metrics.py
old_docs/: installation_guide.md
(+227 files in other folders)
