[project]
name = "coscientist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "boto3>=1.43.32",
    "fedotmas",
    "google-adk>=2.3.0",
    "json-repair>=0.30.0",
    "langchain-text-splitters>=1.1.2",
    "metapub>=0.7.4",
    "opik>=2.0.70",
    "rag-tools",
    "rank-bm25>=0.2.2",
]


[tool.uv.sources]
rag-tools = { git = "https://github.com/fiestaxxl/rag_tools.git" }
fedotmas = { git = "https://github.com/ITMO-NSS-team/FEDOT.MAS.git", subdirectory = "packages/fedotmas" }

[tool.setuptools]
packages = ["CoScientist"]
