[project]
name = "paper-analysis-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.76",
    "botocore>=1.42.76",
    "fastmcp>=3.1.1",
    "pikepdf>=10.5.1",
    "protollm",
    "pypdf>=6.9.2",
]

[tool.uv.sources]
protollm = { git = "https://github.com/aimclub/ProtoLLM.git", rev = "main" }
